tests/positive/issue1466/M.juvix
module M;

type ℕ :=
  | z : ℕ
  | s : ℕ → ℕ;

nat : Type := ℕ;

nat2 : Type := nat;

syntax infixl 1 +;

+ : nat2 → nat → nat
  | z b := b
  | (s a) b := s (a + b);
